# netrain

./: .gitignore  .gitmessage  .releaserc.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DISTRIBUTION.md  LAUNCH_CHECKLIST.md  LICENSE  PERFORMANCE_REPORT.md  README.md  RELEASE_NOTES.md  RELEASING.md  SOCIAL_MEDIA_TEMPLATES.md  VISUAL_EFFECTS.md  commitlint.config.js  demo.sh  install.sh  package.json  test_capture.sh  visual_fixes.md
.claude/: config.json
.github/: BRANCH_PROTECTION.md  CODEOWNERS  dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml  commitlint.yml  release.yml  semantic-release.yml
benches/: benchmarks.rs
homebrew/: netrain.rb
scripts/: prepare-homebrew.sh  publish-crate.sh  release.sh  update-version.sh
src/: lib.rs  main.rs  main_fixed.rs  main_simple.rs  matrix_rain.rs  optimized.rs  packet.rs  protocol_activity.rs  simple_matrix 2.rs  simple_matrix.rs  threat_detection.rs
tests/: integration_tests.rs  matrix_rain_tests.rs  threat_detection_tests.rs
tests/fixtures/: ddos_attack.pcap  mixed_protocols.pcap  normal_traffic.pcap  port_scan.pcap
